# GeminiGrip

./: .gitignore  README.md  gemini_deep_research.py  main.py  pyproject.toml  requirements.txt
scripts/: __init__.py  browser_manager.py  config.py
tests/: test_gemini_deep_research.py
